# Copyright 2021 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//ui/ozone/ozone.gni")
import("//webos/install/paths.gni")

if (ozone_platform_wayland) {
  copy("unit_tests") {
    testonly = true

    sources = [
      "$root_out_dir/libminigbm.so",
      "$root_out_dir/ozone_unittests",
    ]

    outputs = [ "$image_path/$unittests_dir/{{source_file_part}}" ]

    deps = [
      "//third_party/minigbm",
      "//ui/ozone:ozone_unittests",
    ]
  }
}
